--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -5,7 +5,7 @@
 #=================== Global configuration ============#
 url=https://www.amazon.com
 capabilities.browserName=chrome
-capabilities.browserVersion=114.0.5735.198
+capabilities.browserVersion=115.0.5790.110
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
@@ -20,8 +20,8 @@ app_version=
 #=====================================================#
 
 #=============== Environment configuration ===========#
-#env=API
-env=WEB
+env=API
+#env=WEB
 API.base=https://reqres.in
 WEB.base=https://www.amazon.com
 API.api_url=https://reqres.in
