--- a/project-qa/pom.xml
+++ b/project-qa/pom.xml
@@ -107,7 +107,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>4.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
@@ -120,6 +120,16 @@
 			<artifactId>junit-jupiter</artifactId>
 			<version>RELEASE</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>pl.oakfusion</groupId>
+			<artifactId>chromedriver</artifactId>
+			<version>2.9</version>
+		</dependency>
+		<dependency>
+			<groupId>pl.oakfusion</groupId>
+			<artifactId>chromedriver</artifactId>
+			<version>2.9</version>
 		</dependency>
 	</dependencies>
 
