--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -5,10 +5,10 @@
 #=================== Global configuration ============#
 url=https://www.amazon.com
 capabilities.browserName=chrome
-capabilities.browserVersion=115.0.5790.110
+capabilities.browserVersion=
 selenium_url=http://localhost:4444/wd/hub
-custom_capabilities=NULL
-extra_capabilities=NULL
+custom_capabilities=
+extra_capabilities=
 app_version=
 
 #desired thread count for parallel execution. If commented "thread-count" value from TestNG suite xml is used.
@@ -20,8 +20,8 @@ app_version=
 #=====================================================#
 
 #=============== Environment configuration ===========#
-env=API
-#env=WEB
+#env=API
+env=WEB
 API.base=https://reqres.in
 WEB.base=https://www.amazon.com
 API.api_url=https://reqres.in
