--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -6,7 +6,7 @@
 url=https://www.amazon.com
 capabilities.browserName=chrome
 capabilities.browserVersion=
-selenium_url=http://localhost:4444/wd/hub
+#selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=
 extra_capabilities=
 app_version=
@@ -55,13 +55,13 @@ init_retry_interval=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://localhost:4723
-#capabilities.automationName=uiautomator2
-#capabilities.deviceName=<phone_name>
-#capabilities.udid=<phone_udid>
-#capabilities.deviceType=phone
-#capabilities.platformName=ANDROID
-#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+selenium_url=http://localhost:4723
+capabilities.automationName=uiautomator2
+capabilities.deviceName=<phone_name>
+capabilities.udid=<phone_udid>
+capabilities.deviceType=phone
+capabilities.platformName=ANDROID
+capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
 #=====================================================#
 
 #uncomment and change deviceName and platformVersion for iOS test
