--- a/project-qa/pom.xml
+++ b/project-qa/pom.xml
@@ -142,6 +142,11 @@
 			<artifactId>agent-core</artifactId>
 			<version>1.9.7</version>
 		</dependency>
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>7.5.1</version> <!-- Replace with the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
