--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -46,13 +46,13 @@ init_retry_interval=1
 #=====================================================#
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-selenium_url=http://localhost:4723
-capabilities.automationName=uiautomator2
-capabilities.deviceName=<phone_name>
-capabilities.udid=<phone_udid>
-capabilities.deviceType=phone
-capabilities.platformName=ANDROID
-capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+#selenium_url=http://127.0.0.1:4723/
+#capabilities.automationName=uiautomator2
+#capabilities.deviceName=<phone_name>
+#capabilities.udid=<phone_udid>
+#capabilities.deviceType=phone
+#capabilities.platformName=ANDROID
+#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
 #=====================================================#
 #uncomment and change deviceName and platformVersion for iOS test
 #======== Local Run for iOS Mobile ===============#
