--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -48,8 +48,8 @@ init_retry_interval=1
 #============ Android Local Mobile ===================#
 #selenium_url=http://127.0.0.1:4723/
 #capabilities.automationName=uiautomator2
-#capabilities.deviceName=<phone_name>
-#capabilities.udid=<phone_udid>
+#capabilities.deviceName=Pixel_3_API_30
+#capabilities.udid=emulator-5554
 #capabilities.deviceType=phone
 #capabilities.platformName=ANDROID
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
