--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -5,7 +5,7 @@
 url=https://www.amazon.com
 capabilities.browserName=chrome
 capabilities.browserVersion=
-#selenium_url=http://localhost:4444/wd/hub
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=
 extra_capabilities=
 app_version=
