--- a/project-qa/src/main/resources/_config.properties
+++ b/project-qa/src/main/resources/_config.properties
@@ -3,9 +3,9 @@
 #=====================================================#
 #=================== Global configuration ============#
 url=https://www.amazon.com
-capabilities.browserName=chrome
+#capabilities.browserName=chrome
 capabilities.browserVersion=
-selenium_url=http://localhost:4444/wd/hub
+#selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=
 extra_capabilities=
 app_version=
@@ -46,13 +46,21 @@ init_retry_interval=1
 #=====================================================#
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://127.0.0.1:4723/
-#capabilities.automationName=uiautomator2
-#capabilities.deviceName=Pixel_3_API_30
-#capabilities.udid=emulator-5554
-#capabilities.deviceType=phone
-#capabilities.platformName=ANDROID
-#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+selmobile_view=true
+selenium_url=http://localhost:4723/wd/hub
+driver_type=mobile
+platform=android
+capabilities.automationName=UiAutomator2
+capabilities.platformName=Android
+capabilities.udid=emulator-5554
+capabilities.deviceName=Galaxy_S8_Redirect
+capabilities.platformVersion=8.0
+capabilities.platform=ANDROID
+capabilities.browserName=Chrome
+capabilities.appWaitDuration=270000
+capabilities.newCommandTimeout=180
+
+capabilities.unicodeKeyboard=true
 #=====================================================#
 #uncomment and change deviceName and platformVersion for iOS test
 #======== Local Run for iOS Mobile ===============#
